--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -27,6 +27,8 @@ jobs:
           url=$(gh api "repos/${{ github.repository }}" --jq ".html_url")
           echo "BASEURL=${url}" >> "$GITHUB_OUTPUT"
         shell: bash
+        env:
+          GH_TOKEN: ${{ github.token }}
       - id: build-html
         run: sphinx-build repo/source build/dev
         shell: bash
