--- a/.github/workflows/build-develop.yml
+++ b/.github/workflows/build-develop.yml
@@ -27,8 +27,8 @@ jobs:
           use-mamba: true
       - id: get-baseurl
         run: |
-          url=$(gh api "repos/${{ github.repository }}" --jq ".html_url")
-          echo "BASEURL=${url}/" >> "$GITHUB_OUTPUT"
+          url=$(gh api "repos/${{ github.repository }}/pages" --jq ".html_url")
+          echo "BASEURL=${url}" >> "$GITHUB_OUTPUT"
         env:
           GH_TOKEN: ${{ github.token }}
       - id: build-html
